Premier controller avec sa route

--- a/docs/commandes/E02.md
+++ b/docs/commandes/E02.md
@@ -133,3 +133,68 @@ mv ./oflix/* ./oflix/.* .
 mv: impossible de déplacer './oflix/.' vers './.': Périphérique ou ressource occupé
 mv: impossible de déplacer './oflix/..' vers './..': Périphérique ou ressource occupé
 ```
+
+## package annotation
+
+```bash
+composer require annotations
+Info from https://repo.packagist.org: #StandWithUkraine
+./composer.json has been updated
+Running composer update sensio/framework-extra-bundle
+Loading composer repositories with package information
+Updating dependencies
+Lock file operations: 4 installs, 0 updates, 0 removals
+  - Locking doctrine/annotations (2.0.1)
+  - Locking doctrine/deprecations (v1.0.0)
+  - Locking doctrine/lexer (2.1.0)
+  - Locking sensio/framework-extra-bundle (v6.2.10)
+Writing lock file
+Installing dependencies from lock file (including require-dev)
+Package operations: 4 installs, 0 updates, 0 removals
+  - Installing doctrine/deprecations (v1.0.0): Extracting archive
+  - Installing doctrine/lexer (2.1.0): Extracting archive
+  - Installing doctrine/annotations (2.0.1): Extracting archive
+  - Installing sensio/framework-extra-bundle (v6.2.10): Extracting archive
+Package sensio/framework-extra-bundle is abandoned, you should avoid using it. Use Symfony instead.
+Generating optimized autoload files
+30 packages you are using are looking for funding.
+Use the `composer fund` command to find out more!
+
+Symfony operations: 2 recipes (6d38f063f53291da5dbbb9ffccd5ca6f)
+  - Configuring doctrine/annotations (>=1.0): From github.com/symfony/recipes:main
+  - Configuring sensio/framework-extra-bundle (>=5.2): From github.com/symfony/recipes:main
+Executing script cache:clear [OK]
+Executing script assets:install public [OK]
+              
+ What's next? 
+              
+
+Some files have been created and/or updated to configure your new packages.
+Please review, edit and commit them: these files are yours.
+
+No security vulnerability advisories found
+Using version ^6.2 for sensio/framework-extra-bundle
+```
+
+## debug:router
+
+```bash
+bin/console debug:router
+ ---------------- ---------- -------- ------ -------------------------- 
+  Name             Method     Scheme   Host   Path                      
+ ---------------- ---------- -------- ------ -------------------------- 
+  default          GET|POST   ANY      ANY    /radium                   
+  _preview_error   ANY        ANY      ANY    /_error/{code}.{_format}  
+ ---------------- ---------- -------- ------ -------------------------- 
+```
+
+```bash
+bin/console debug:router --show-controllers
+ ---------------- ---------- -------- ------ -------------------------- --------------------------------------- 
+  Name             Method     Scheme   Host   Path                       Controller                             
+ ---------------- ---------- -------- ------ -------------------------- --------------------------------------- 
+  default          GET|POST   ANY      ANY    /radium                    App\Controller\MainController::home()  
+  _preview_error   ANY        ANY      ANY    /_error/{code}.{_format}   error_controller::preview()            
+ ---------------- ---------- -------- ------ -------------------------- --------------------------------------- 
+```
+
