--- a/docs/cours/E02.md
+++ b/docs/cours/E02.md
@@ -2,7 +2,13 @@
 
 ## Création d'un projet Symfony
 
-on commence par la commande `composer create-project symfony/skeleton:"^5.4" my_project_directory` tel que dit dans la [doc](https://symfony.com/doc/5.4/setup.html#creating-symfony-applications)
+on commence par la commande :
+
+```bash
+composer create-project symfony/skeleton:"^5.4" my_project_directory
+```
+
+ tel que dit dans la [doc](https://symfony.com/doc/5.4/setup.html#creating-symfony-applications)
 
 le nom du dossier du projet (`my_project_directory`) n'a pas d'importance.
 
@@ -24,3 +30,101 @@ mv: impossible de déplacer './my_project_directory/..' vers './..': Périphéri
 Cela est normal, les dossiers `.` et `..` sont des dossiers spéciaux Linux, on ne peut pas les bouger.
 
 Après ces deux commandes on peut supprimer le dossier `my_project_directory`
+
+```bash
+rmdir my_project_directory
+```
+
+## notre première route
+
+Comment on fait pour créer un route ? (pas de groudron)
+
+* URL : `/`
+* Controller : `MainController`
+* Method : `home`
+
+notre premier controller avec notre première route
+
+```php
+<?php
+
+namespace App\Controller;
+
+use Symfony\Component\HttpFoundation\Response;
+
+class MainController
+{
+    public function home(): Response
+    {
+        $firstResponse = new Response("<h1>Salut les Radium</h1>");
+        return $firstResponse;
+    }
+}
+```
+
+Pour la création de l'URL et l'association avec notre méthode de notre controller, il est possible d'utiliser le fichier de route OU d'utiliser un package : [annotations](https://symfony.com/doc/5.4/page_creation.html#annotation-routes)
+
+```bash
+composer require annotations
+```
+
+## @Route
+
+exemple
+
+```php
+/**
+ * @Route("/movie/{id}", name="show_movie", methods={"GET"}, requirements={"id"="\d+"})
+ */
+```
+
+On décortique:
+
+`@Route()` ressemble à une function, il y a des paramètres, certain obligatoire, d'autre non.
+
+Le premier paramètre est l'URL de la route. Il est obligatoire.
+L'URL de d'une route peut être composé de paramètre variable écrit comme ceci : `{param}`
+
+le `name` doit être un nom unique, ça va nous servir à retrouver la route par son nom unique quand on voudra générer des liens vers cette route.
+Ce paramètre n'est pas obligatoire, un nom calculé sera donné par défaut.
+Il vaut mieux le fournir.
+
+`methods={"GET"}` restreind l'accès à cette route UNIQUEMENT en mode GET. pas de POST, ni PUT, etc ...
+On peut mettre autant de method que l'on veux, séparé par une virgule.
+Par défaut toutes les méthodes sont acceptées.
+
+`requirements={"id"="\d+"}` nous permet de valider les paramètres de la route.
+On a pas envie de recevoir du texte alors que l'on attends un `id`
+On utilise donc une regex `\d+` pour attendre uniquement des nombres, avec un minimum de 1 chiffre.
+
+Il y a bien d'autre paramètres, si le besoin s'en ressent, [allons voir la doc](https://symfony.com/doc/5.4/routing.html)
+
+## annexes
+
+### le fichier de script de création de projet
+
+ce fichier permet de lancer plusieur commandes d'affilé pour créer l'environnement de travail avec le framework de symfony, en suivant les notions qui ont été abordées en cours.
+
+Ce fichier sera modifié tout au long de la spé
+
+pour l'utiliser dans un autre cadre (projet perso), il suffit de le copier et de l'executer.
+
+```bash
+# dans un dossier
+./create_project.sh
+```
+
+Pour exécuter le fichier il se peut qu'il faille lui donner les droits d'éxécution
+
+```bash
+# 7 = rwx
+# 7 = rwx
+# 4 = r--
+sudo chmod 774 create_project.sh
+```
+
+### inteliphense n'est pas à jour
+
+Quand je viens d'installer un package ou de créer un projet, il se peu que l'affichage dans VSCode nous disent qu'il y a plein de problème.
+
+On peu redemarrer VSCode OU taper le raccourci clavier `ctrl+shift+p` qunad on est dans un fichier PHP, et ensuite de selectionner `index workspace`
