--- a/docs/erreurs/E02.md
+++ b/docs/erreurs/E02.md
@@ -1,1 +1,75 @@
 # E02
+
+## student@gwendoline-soulard-oclock-student:/var/www/html/spe/symfony$ ./create_project bash: ./create_project: Aucun fichier ou dossier de ce type
+
+j'essai de lancer le fichier de création de projet
+
+l'erreur me dit qu'il n'y a pas de fichier avec ce nom.
+
+Je vois que dans le message d'erreur mon fichier ne porte pas l'extention `.sh`
+
+Je devrais executer le fichier `./create_project.sh`
+
+Et je dois vérifier que je suis dans le bon dossier : `docs/script`
+
+## [Mon Apr 24 1315 2023] Failed to listen on 0.0.0.0:8000 (reason: Address already in use)
+
+je lance mon serveur php avec le commande `php -S 0.0.0.0:8000 -t public`
+
+L'erreur me dit que le port 8000 est déjà utilisé.
+
+Si je ne sais pas qui utilise le port, il suffit de changer de port.
+
+Par convention, pour le dev web, on utilise :
+
+* 8000
+* 8080
+* 8081
+* 8082
+* 808x
+
+`php -S 0.0.0.0:8080 -t public`
+
+ne pas utiliser un port au hasard.
+ex : 3306 Mysql
+
+## The controller must return a "Symfony\Component\HttpFoundation\Response" object but it returned null. Did you forget to add a return statement somewhere in your controller?
+
+Je viens de créer un controller à la main, dès que j'affiche ma page, j'ai cette erreur
+
+L'erreur me dit que je dois **OBLIGATOIREMENT** renvoyer un objet `Response`
+
+C'est une obligation dans Symfony, toute les méthodes de tout les controller doivent renvoyer un objet `Response`
+
+## [Semantical Error] The annotation "@Route" in method App\Controller\MainController::home() was never imported. Did you maybe forget to add a "use" statement for this annotation? in /var/www/html/Radium/symfo-oflix-JB-oclock/config/routes/../../src/Controller/ (which is being imported from "/var/www/html/Radium/symfo-oflix-JB-oclock/config/routes/annotations.yaml"). Make sure to use PHP 8+ or that annotations are installed and enabled
+
+je viens de mettre un docblock avec l'annotation `@Route()`
+
+l'erreur me dit que j'ai oublié le use
+
+```php
+use Symfony\Component\Routing\Annotation\Route;
+```
+
+## No route found for "GET http://0.0.0.0:8000/radium"
+
+l'erreur me dit que la route `GET /radium` n'existe pas.
+
+Il faut vérifier :
+
+* l'URL
+* la méthode
+
+si tout est bon, il reste la possibilité de taper une commande symfony pour obtenir la liste des routes
+
+```bash
+bin/console debug:router --show-controllers
+ ---------------- ---------- -------- ------ -------------------------- --------------------------------------- 
+  Name             Method     Scheme   Host   Path                       Controller                             
+ ---------------- ---------- -------- ------ -------------------------- --------------------------------------- 
+  default          GET|POST   ANY      ANY    /radium                    App\Controller\MainController::home()  
+  _preview_error   ANY        ANY      ANY    /_error/{code}.{_format}   error_controller::preview()            
+ ---------------- ---------- -------- ------ -------------------------- --------------------------------------- 
+```
+
+On a vu qu'il pouvait aussi manquer le `composer require annotations`
