--- a/docs/cours/E02.md
+++ b/docs/cours/E02.md
@@ -99,6 +99,34 @@ On utilise donc une regex `\d+` pour attendre uniquement des nombres, avec un mi
 
 Il y a bien d'autre paramètres, si le besoin s'en ressent, [allons voir la doc](https://symfony.com/doc/5.4/routing.html)
 
+### Template
+
+[doc](https://symfony.com/doc/5.4/page_creation.html#rendering-a-template)
+
+```bash
+composer require twig
+```
+
+Pour profiter de twig, symfony nous à mis à disposition un controlleur que l'on doit hériter: `AbstractController`
+
+```php
+
+use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
+
+class MainController extends AbstractController
+{
+    
+}
+```
+
+une nouvelle méthode est disponible dans notre controller : `$this->render()`
+la méthode render() prend 2 paramètres:
+
+* le nom du fichier de vue que l'on veux utiliser
+* un tableau de donnée à afficher
+
+Par convention les templates sont rangés dans un dossier qui porte le nom du controller qui pourra l'utiliser.
+
 ## annexes
 
 ### le fichier de script de création de projet
