--- a/docs/commandes/E02.md
+++ b/docs/commandes/E02.md
@@ -198,3 +198,65 @@ bin/console debug:router --show-controllers
  ---------------- ---------- -------- ------ -------------------------- --------------------------------------- 
 ```
 
+## twig
+
+```bash
+composer require twig
+Info from https://repo.packagist.org: #StandWithUkraine
+./composer.json has been updated
+Running composer update symfony/twig-pack
+Loading composer repositories with package information
+Restricting packages listed in "symfony/symfony" to "5.4.*"
+Updating dependencies
+Lock file operations: 6 installs, 0 updates, 0 removals
+  - Locking symfony/translation-contracts (v2.5.2)
+  - Locking symfony/twig-bridge (v5.4.22)
+  - Locking symfony/twig-bundle (v5.4.21)
+  - Locking symfony/twig-pack (v1.0.1)
+  - Locking twig/extra-bundle (v3.5.1)
+  - Locking twig/twig (v3.5.1)
+Writing lock file
+Installing dependencies from lock file (including require-dev)
+Package operations: 6 installs, 0 updates, 0 removals
+  - Installing twig/twig (v3.5.1): Extracting archive
+  - Installing symfony/translation-contracts (v2.5.2): Extracting archive
+  - Installing symfony/twig-bridge (v5.4.22): Extracting archive
+  - Installing symfony/twig-bundle (v5.4.21): Extracting archive
+  - Installing twig/extra-bundle (v3.5.1): Extracting archive
+  - Installing symfony/twig-pack (v1.0.1): Extracting archive
+Package sensio/framework-extra-bundle is abandoned, you should avoid using it. Use Symfony instead.
+Generating optimized autoload files
+36 packages you are using are looking for funding.
+Use the `composer fund` command to find out more!
+
+Symfony operations: 2 recipes (85ed3a8d0a5529ce0e60ac0c5b395bef)
+  - Configuring symfony/twig-bundle (>=5.4): From github.com/symfony/recipes:main
+  - Configuring twig/extra-bundle (>=v3.5.1): From auto-generated recipe
+Unpacking Symfony packs
+  - Unpacked symfony/twig-pack
+Loading composer repositories with package information
+Updating dependencies
+Nothing to modify in lock file
+Installing dependencies from lock file (including require-dev)
+Package operations: 0 installs, 0 updates, 1 removal
+  - Removing symfony/twig-pack (v1.0.1)
+Package sensio/framework-extra-bundle is abandoned, you should avoid using it. Use Symfony instead.
+Generating optimized autoload files
+35 packages you are using are looking for funding.
+Use the `composer fund` command to find out more!
+
+Run composer recipes at any time to see the status of your Symfony recipes.
+
+Executing script cache:clear [OK]
+Executing script assets:install public [OK]
+
+No security vulnerability advisories found
+              
+ What's next? 
+              
+
+Some files have been created and/or updated to configure your new packages.
+Please review, edit and commit them: these files are yours.
+
+No security vulnerability advisories found
+```
