Ajout page home et début facto header / footer

--- a/docs/cours/E03.md
+++ b/docs/cours/E03.md
@@ -56,7 +56,7 @@ On utilise les `{% %}` pour les instructions de twig
 {# le commentaire #}
 {# 
 le commentaire 
-sur plusieur lignes
+su plusieur lignes
 #}
 ```
 
@@ -64,12 +64,12 @@ sur plusieur lignes
 {{ variable }}
 ```
 
-la double accolade est pour écrire, c'est à dire faire un `echo`
+la double accolade est pour écrire, c'est a dire faire un `echo`
 
-équivalent à 
+équivalent à
 
 ```php
-echo $variable
+echo $variable;
 ```
 
 ### comment on donne des variables à twig ?
@@ -94,8 +94,36 @@ $twigResponse = $this->render("main/home.html.twig",
 
 On remarque qu'il n'y a pas de `$` dans les variables twig
 
+## Routes v2
+
+les routes sont listées dans l'ordre alphabétique des controllers, puis dans l'ordre de déclaration des méthodes du controller.
+
+ex :
+
+```text
+AController::Zmethod
+AController::Amethod
+BController::Bmethod
+BController::Ymethod
+CController::Amethod
+```
+
+Attention, chaque route est rangée dans un tableau associatif dont la clé est le nom de la route.
+Donc si on a plusieurs fois le même nom de route, la dernière route avec ce nom sera la seule active.
+
+Si on ne donne pas de nom de route, Symfony en génère un.
+Le nom sera comme ceci : `<namespace>_<controller>_<method>`
+ex : `app_main_home`
+
 ## annexes
 
 ### activer emmet dans twig
 
 aller dans les paramètres, chercher `emmet`, puis `Emmet: Include Languages` ajouter élément `twig` et valeur `html`
+
+### changer l'indentation des fichiers
+
+paramètres > indent
+Contrôle la mise en retrait de l'arborescence, en pixels.
+valeur par défaut : 8
+
