--- a/docs/erreurs/E03.md
+++ b/docs/erreurs/E03.md
@@ -4,7 +4,7 @@
 
 je viens de mettre en place l'héritage du layout dans un de mes templates.
 
-L'erreur me dit que je ne peut pas mettre du contenu en dehors dans block, à partir du moment où j'hérite d'un layout.
+L'erreur me dit que je ne peut pas mettre du contenu en dehors des block, à partir du moment où j'hérite d'un layout.
 
 je dois chercher dans mon template le HTML qui n'est pas dans un block
 
@@ -14,3 +14,9 @@ Je viens de créer un block
 le nom de ce block est avec un `-`
 
 Twig n'accepte pas les `-` dans le noms des blocks
+
+## Maximum function nesting level of '256' reached, aborting
+
+l'erreur me dit que je fais des include en boucle (plus de 256 fois)
+
+Il faut que je fasse le chemin des include / extends pour trouver où est la boucle infinie
