lien en dur et fixe image avec asset

--- a/docs/cours/E03.md
+++ b/docs/cours/E03.md
@@ -115,6 +115,40 @@ Si on ne donne pas de nom de route, Symfony en génère un.
 Le nom sera comme ceci : `<namespace>_<controller>_<method>`
 ex : `app_main_home`
 
+## paramètres de route
+
+Pour ajouter correctement un paramètre de route, on fait 3 choses :
+
+* on modifie l'URL en ajoutant des `{}` avec le nom du paramètre dedans : `{id}`
+* on impose une règle de validation du paramètre, un ID doit être un entier et pas une chaine
+  * on ajoute, dans notre annotations de route, un `requirements` avec une regex qui valide le paramètre de route
+* on ajoute un argument à notre méthode du même nom que notre paramètre de route
+
+```php
+/**
+ * affichage des détails d'un film
+ *
+ * @Route("/movies/{id}", name="movie_show", requirements={"id"="\d+"} ,methods={"GET"})
+ * 
+ * @return Response
+ */
+```
+
+## les assets et leur lien
+
+[doc](https://symfony.com/doc/5.4/components/asset.html)
+[doc avec twig](https://symfony.com/doc/5.4/templates.html#linking-to-css-javascript-and-image-assets)
+
+```bash
+composer require symfony/asset
+```
+
+avec ce composant, dans twig tout les assets (CSS, images, JS) le lien sera fait correctement
+
+```twig
+<img src="{{ asset('images/poster-placeholder.png') }}" class="img-fluid">
+```
+
 ## annexes
 
 ### activer emmet dans twig
@@ -126,4 +160,3 @@ aller dans les paramètres, chercher `emmet`, puis `Emmet: Include Languages` aj
 paramètres > indent
 Contrôle la mise en retrait de l'arborescence, en pixels.
 valeur par défaut : 8
-
