--- a/docs/erreurs/E03.md
+++ b/docs/erreurs/E03.md
@@ -13,10 +13,45 @@ je dois chercher dans mon template le HTML qui n'est pas dans un block
 Je viens de créer un block
 le nom de ce block est avec un `-`
 
-Twig n'accepte pas les `-` dans le noms des blocks
+Twig n'accepte pas les `-` dans le nom des blocks
 
 ## Maximum function nesting level of '256' reached, aborting
 
 l'erreur me dit que je fais des include en boucle (plus de 256 fois)
 
 Il faut que je fasse le chemin des include / extends pour trouver où est la boucle infinie
+
+## A placeholder name must be a string (0 given). Did you forget to specify the placeholder key for the requirement "id" of route "movie_show" in "App\Controller\MainController::show()"? in /var/www/html/Symfony/symfo-oflix-FelixPicot1989/config/routes/../../src/Controller/ (which is being imported from "/var/www/html/Symfony/symfo-oflix-FelixPicot1989/config/routes/annotations.yaml"). Make sure to use PHP 8+ or that annotations are installed and enabled
+
+je viens de créer une nouvelle route avec cette annotation
+
+```php
+/**
+ * affichage des détails d'un film
+ *
+ * @Route("/movies/{id}", name="movie_show", requirements={"id"} ,methods={"GET"})
+ * 
+ * @return Response
+ */
+```
+
+l'erreur me dit que j'ai oublié d'ajouter le regex pour le requirements
+
+```php
+/**
+ * affichage des détails d'un film
+ *
+ * @Route("/movies/{id}", name="movie_show", requirements={"id"="\d+"} ,methods={"GET"})
+ * 
+ * @return Response
+ */
+```
+
+## Too few arguments to function Symfony\Bridge\Twig\Extension\AssetExtension::getAssetUrl(), 0 passed in /var/www/html/Symfony/symfo-oflix-Pierre-Salhab/var/cache/dev/twig/09/090498989014f62edae017b7bbdbcacd525aeed827fdc73124fdd24fcd65691a.php on line 67 and at least 1 expected
+
+l'erreur me dit que j'utilise la function `asset` dans twig, mais que je ne lui fournit pas d'arguments
+
+```twig
+<img src="{{ asset() }}" class="img-fluid"> {# ERREUR #}
+<img src="{{ asset('images/poster-placeholder.png') }}" class="img-fluid"> {# OK #}
+```
