--- a/docs/cours/E03.md
+++ b/docs/cours/E03.md
@@ -149,6 +149,144 @@ avec ce composant, dans twig tout les assets (CSS, images, JS) le lien sera fait
 <img src="{{ asset('images/poster-placeholder.png') }}" class="img-fluid">
 ```
 
+## le mot clé static
+
+il peut être placé sur une propriété ou une méthode.
+
+il est la pour rendre accessible une propriété/méthode sans instancier la classe qui le porte.
+
+c'est un technique qui est utilisé régulièrement pour des données fixes/statiques
+
+exemple :
+
+```php
+// ceci est une const, mais c'est la même idée
+// le const c'est static ET non modifiable
+Response::HTTP_NOT_FOUND;
+```
+
+Le fait d'être en static, on a pas accès à `$this`, car il n'y a pas d'instance (new)
+dans une classe, on utilise donc `self::$shows`
+
+### boucle for
+
+[doc](https://twig.symfony.com/doc/3.x/tags/for.html)
+
+Une boucle for dans Twig se fait de cette façon pour aller de 3 à 8
+
+```twig
+{% for i in 3..8 %}
+    * {{ i }}
+{% endfor %}
+```
+
+équivaut à :
+
+```php
+for($i=3; $i<=8; $i++) {
+    echo '*'.$i;
+}
+```
+
+```twig
+<h1>Members</h1>
+<ul>
+    {% for user in users %}
+        <li>{{ user.username }}</li>
+    {% endfor %}
+</ul>
+
+```
+
+équivaut à :
+
+```php
+<h1>Members</h1>
+<ul>
+    <?php foreach ($users as $user): ?>
+        <li><?= $user['username']?></li>
+    <?php endforeach; ?>
+</ul>
+```
+
+Et si on a besoin de la clé du tableau
+
+```twig
+<h1>Members</h1>
+<ul>
+    {% for key, user in users %}
+        <li>{{ key }}: {{ user.username|e }}</li>
+    {% endfor %}
+</ul>
+```
+
+[doc filtre `|e`](https://twig.symfony.com/doc/3.x/filters/escape.html)
+
+équivaut à :
+
+```php
+<h1>Members</h1>
+<ul>
+    <?php foreach ($users as $key => $user): ?>
+        <li><?= $key . ':' . $user['username']?></li>
+    <?php endforeach; ?>
+</ul>
+```
+
+Avec le for de twig, nous avons un else qui gère le cas où il n'y a pas d'éléments dans le tableau/collection parcourue
+
+```twig
+<ul>
+    {% for user in users %}
+        <li>{{ user.username|e }}</li>
+    {% else %}
+        <li><em>no user found</em></li>
+    {% endfor %}
+</ul>
+```
+
+équivaut à :
+
+```php
+<ul>
+    <?php if(empty($users)) : ?>
+        <li><em>no user found</em></li>
+    <?php else : ?>
+        <?php foreach ($users as $user): ?>
+            <li><?= $user['username']?></li>
+        <?php endforeach; ?>
+    <?php endif; ?>
+</ul>
+```
+
+## twig dump
+
+pour forcer l'écriture du dump dans la page
+
+```twig
+{{ dump(movieForTwig) }}
+```
+
+c'est assez beau on va faire BCP mieux
+
+on va ajouter 2 composants spéciaux pour le debug
+
+```bash
+composer require --dev symfony/profiler-pack
+```
+
+```bash
+composer require --dev symfony/debug-bundle
+```
+
+et maintenant, dans twig, on va utiliser
+
+```twig
+{% dump(movieForTwig) %}
+```
+
+cela va cacher le dump dans la `webDebugToolbar` grace au package `debug-bundle`
+
 ## annexes
 
 ### activer emmet dans twig
