lin nav OK et lien home OK

--- a/docs/cours/E03.md
+++ b/docs/cours/E03.md
@@ -287,6 +287,21 @@ et maintenant, dans twig, on va utiliser
 
 cela va cacher le dump dans la `webDebugToolbar` grace au package `debug-bundle`
 
+## twig : liens avec path
+
+pour une route sans paramètre
+
+```twig
+{{ path('default') }}
+```
+
+pour une route avec paramètre
+
+```twig
+{{ path('movie_show') }} {# erreur #}
+{{ path('movie_show', {'id': key}) }} {# ok #}
+```
+
 ## annexes
 
 ### activer emmet dans twig
