--- a/docs/erreurs/E03.md
+++ b/docs/erreurs/E03.md
@@ -55,3 +55,16 @@ l'erreur me dit que j'utilise la function `asset` dans twig, mais que je ne lui 
 <img src="{{ asset() }}" class="img-fluid"> {# ERREUR #}
 <img src="{{ asset('images/poster-placeholder.png') }}" class="img-fluid"> {# OK #}
 ```
+
+## An exception has been thrown during the rendering of a template ("Some mandatory parameters are missing ("id") to generate a URL for route "movie_show".").
+
+je viens d'ajouter un lien dans une vue twig.
+
+ma route contient des paramètres de route
+
+l'erreur me dit que j'ai oublié de fournir le paramètre de route dans twig
+
+```twig
+{{ path('movie_show') }} {# erreur #}
+{{ path('movie_show', {'id': key}) }} {# ok #}
+```
