mise à jour script création de projet

--- a/docs/commandes/E03.md
+++ b/docs/commandes/E03.md
@@ -1,1 +1,118 @@
 # E03
+
+## symfony/assets
+
+```bash
+composer require symfony/asset
+Info from https://repo.packagist.org: #StandWithUkraine
+./composer.json has been updated
+Running composer update symfony/asset
+Loading composer repositories with package information
+Updating dependencies
+Lock file operations: 1 install, 0 updates, 0 removals
+  - Locking symfony/asset (v5.4.21)
+Writing lock file
+Installing dependencies from lock file (including require-dev)
+Package operations: 1 install, 0 updates, 0 removals
+  - Installing symfony/asset (v5.4.21): Extracting archive
+Package sensio/framework-extra-bundle is abandoned, you should avoid using it. Use Symfony instead.
+Generating optimized autoload files
+36 packages you are using are looking for funding.
+Use the `composer fund` command to find out more!
+
+Run composer recipes at any time to see the status of your Symfony recipes.
+
+Executing script cache:clear [OK]
+Executing script assets:install public [OK]
+
+No security vulnerability advisories found
+```
+
+## profiler
+
+```bash
+composer require --dev symfony/profiler-pack
+Info from https://repo.packagist.org: #StandWithUkraine
+./composer.json has been updated
+Running composer update symfony/profiler-pack
+Loading composer repositories with package information
+Restricting packages listed in "symfony/symfony" to "5.4.*"
+Updating dependencies
+Lock file operations: 3 installs, 0 updates, 0 removals
+  - Locking symfony/profiler-pack (v1.0.6)
+  - Locking symfony/stopwatch (v5.4.21)
+  - Locking symfony/web-profiler-bundle (v5.4.21)
+Writing lock file
+Installing dependencies from lock file (including require-dev)
+Package operations: 3 installs, 0 updates, 0 removals
+  - Installing symfony/web-profiler-bundle (v5.4.21): Extracting archive
+  - Installing symfony/stopwatch (v5.4.21): Extracting archive
+  - Installing symfony/profiler-pack (v1.0.6): Extracting archive
+Package sensio/framework-extra-bundle is abandoned, you should avoid using it. Use Symfony instead.
+Generating optimized autoload files
+39 packages you are using are looking for funding.
+Use the `composer fund` command to find out more!
+
+Symfony operations: 1 recipe (ec05262d98642446ad35c2ae499b05f2)
+  - Configuring symfony/web-profiler-bundle (>=5.3): From github.com/symfony/recipes:main
+Unpacking Symfony packs
+  - Unpacked symfony/profiler-pack
+Loading composer repositories with package information
+Updating dependencies
+Nothing to modify in lock file
+Installing dependencies from lock file (including require-dev)
+Package operations: 0 installs, 0 updates, 1 removal
+  - Removing symfony/profiler-pack (v1.0.6)
+Package sensio/framework-extra-bundle is abandoned, you should avoid using it. Use Symfony instead.
+Generating optimized autoload files
+38 packages you are using are looking for funding.
+Use the `composer fund` command to find out more!
+
+Run composer recipes at any time to see the status of your Symfony recipes.
+
+Executing script cache:clear [OK]
+Executing script assets:install public [OK]
+
+No security vulnerability advisories found
+              
+ What's next? 
+              
+
+Some files have been created and/or updated to configure your new packages.
+Please review, edit and commit them: these files are yours.
+
+No security vulnerability advisories found
+```
+
+## debug-bundle
+
+```bash
+composer require --dev symfony/debug-bundle
+./composer.json has been updated
+Running composer update symfony/debug-bundle
+Loading composer repositories with package information
+Updating dependencies
+Lock file operations: 1 install, 0 updates, 0 removals
+  - Locking symfony/debug-bundle (v5.4.21)
+Writing lock file
+Installing dependencies from lock file (including require-dev)
+Package operations: 1 install, 0 updates, 0 removals
+  - Installing symfony/debug-bundle (v5.4.21): Extracting archive
+Package sensio/framework-extra-bundle is abandoned, you should avoid using it. Use Symfony instead.
+Generating optimized autoload files
+39 packages you are using are looking for funding.
+Use the `composer fund` command to find out more!
+
+Symfony operations: 1 recipe (c55395e4b58546c999038489f4af79bc)
+  - Configuring symfony/debug-bundle (>=5.3): From github.com/symfony/recipes:main
+Executing script cache:clear [OK]
+Executing script assets:install public [OK]
+              
+ What's next? 
+              
+
+Some files have been created and/or updated to configure your new packages.
+Please review, edit and commit them: these files are yours.
+
+No security vulnerability advisories found
+```
