Ajout coursd E04 - MCD

--- a/docs/cours/E04.md
+++ b/docs/cours/E04.md
@@ -34,3 +34,133 @@ $this->redirectToRoute('nom_de_la_route', ["parametre_route" => $valeurParamètr
 ```
 
 Cela envoit un code HTTP `302` que le navigateur va comprendre et il va récupérer l'URL de la route, pour automatiquement refaire une nouvelle requete vers notre serveur.
+
+## SQL
+
+[exo](https://sqlbolt.com/lesson/select_queries_introduction)
+
+[exo oclock](http://cluedo.oclock.lan/)
+
+[exo cluedo US](https://mystery.knightlab.com/)
+
+### SELECT
+
+```sql
+SELECT * FROM movies;
+SELECT title FROM movies;
+```
+
+### WHERE
+
+```sql
+SELECT * FROM movies WHERE id = 6;
+SELECT * FROM movies WHERE `year` BETWEEN 2000 AND 2010;
+SELECT title, `year` FROM movies WHERE `year` <= 2003;
+```
+
+```sql
+SELECT * FROM movies WHERE title like '%Toy Story%';
+SELECT * FROM movies WHERE director != 'John Lasseter';
+SELECT * FROM movies WHERE title LIKE "WALL-_";
+```
+
+
+```sql
+SELECT DISTINCT director FROM movies ORDER BY director;
+SELECT *
+FROM movies
+ORDER BY `year` DESC
+LIMIT 4;
+
+SELECT *
+FROM movies
+ORDER BY id
+LIMIT 5 OFFSET 5; -- LIMIT 5,5 avec Mysql
+```
+
+```sql
+SELECT * FROM north_american_cities
+WHERE country = 'United States'
+ORDER BY Population DESC
+LIMIT 2, 2;
+```
+
+[sql.sh jointure schema](https://sql.sh/2401-sql-join-infographie)
+
+```sql
+SELECT * FROM movies, Boxoffice WHERE movies.id = Boxoffice.movie_id;
+SELECT * FROM movies INNER JOIN Boxoffice ON movies.id = Boxoffice.movie_id;
+SELECT movies.*, Boxoffice.* FROM movies
+INNER JOIN Boxoffice ON movies.id = Boxoffice.movie_id
+WHERE Boxoffice.International_sales > Boxoffice.Domestic_sales;
+```
+
+```sql
+SELECT DISTINCT buildings.building_name, employees.role 
+-- TABLE A : buildings
+-- TABLE B : employees
+FROM buildings
+  LEFT JOIN employees
+    ON buildings.building_name = employees.building;
+```
+
+## méthode Merise
+
+### Modèle Conceptuel de Donnée : MCD
+
+Les objectifs de ce schéma
+
+* communiquer avec notre client
+* définir les tables (entités)
+  * définir les champs qui composent l'entité
+* définir les relations entre les entités
+  * donner 2 cardinalités
+  * chaque cardinalités a
+    * une valeur minimale : 0/1
+    * une valeur maximale : 1/N
+  * dans une relation il peut y avoir des informations supplémentaires
+    * c'est informations seront stockées dans une entité qui apparaitra dans le MLD
+
+[outils en ligne](https://www.mocodo.net/)
+
+Pas de type de donnée : le Modèle Physique va le faire
+
+Pas terme technique : ce schéma est destinée au client / non-technicien
+Donc pas d'ID (**pas au TP**), c'est technique un ID
+Par contre on a besoin d'un code unique:
+
+* en france, le numéro de sécurité sociale
+* livre : ISBN International Standard Book Number – ou Numéro international normalisé du livre
+* audiovisuel : ISAN International Standard Audiovisual Number, abrégé par le sigle ISAN, littéralement « numéro international normalisé des œuvres audiovisuelles »
+* Un GUID est un entier 128 bits (16 octets) qui peut être utilisé sur tous les ordinateurs et réseaux où un identificateur unique est requis.
+* [wikipedia](https://en.wikipedia.org/wiki/Unique_identifier)
+
+#### cardinalités
+
+Un film possède 0 ou plusieurs (N) saison
+Une saison appartient à 1 et 1 seul film
+MOVIE 0N <-- BELONGS TO --> 11 SEASON
+
+Un film possède 0 ou plusieurs (N) genre
+un genre possède 0 ou plusieurs (N) film
+MOVIE 0N <-- BELONGS TO --> 0N GENRE
+
+On peut créer plein de genre dans la base
+Et ne pas avoir de film associé à ce genre dès le début
+
+On peut créer plein de film dans la base
+Et ne pas avoir de genre associé à ce film dès le début
+
+Tips : si dans une relation, la cardinalité minimale est à 1 elle est obligatoire
+Cela peut nous géner dans nos developpement.
+Dans le doute, mettre 0.
+Si on se pose la question sur une cardinalité mini, même chose, 0 par défaut
+
+### Modèle Logique de Donnée : MLD
+
+
+
+### Modèle Physique de Donnée : MPD
+
+C'est à ce moment que l'on choisit notre moteur de base de données
+C'est à ce moment que l'on décide des types de données [sql.sh](https://sql.sh/416-limites-types-donnees-sgbd)
