--- a/docs/cours/E04.md
+++ b/docs/cours/E04.md
@@ -158,7 +158,30 @@ Si on se pose la question sur une cardinalité mini, même chose, 0 par défaut
 
 ### Modèle Logique de Donnée : MLD
 
+l'objectif de cette étape (ce n'est pas un schéma) et de créer:
 
+* les clés étrangères
+* les tables pivot
+
+Dans le MCD, on a définit des clés Primaires (les codes de chaque table)
+Avec nos relations on a besoin de noter les relations dans les données.
+ex : 1 saison appartient à 1 film
+
+j'ai un moyen mnémotechnique de me souvenir comment on créer les clé étrangères.
+
+Toutes les clés primaires voyagent ✈ et elles veulent aller dans les plus d'autre pays (tables) possible.
+Sur une relation, uniquement la clé primaire qui a le plus d'argent (cardinalité max) voyage.
+Donc les clés primaires voyagent depuis la table avec la cardinalité maximum N vers l'autre table.
+
+La clé primaire de `Movie` voyage donc vers la table `Season`, et devient une clé étrangère dans cette table.
+
+Mais comment on fait quand il y a une cardinalité max N de chaque coté 🤔 ?
+
+Repronnons l'idée du voyage :
+
+les 2 clés primaires voyagent, se rencontrent sur le chemin, tombent amoureuses 💘, et fondent une nouvelle table, et il eurent plein de petite clés. Awwwn 🤗
+
+On appele cette nouvelle table une table `pivot`
 
 ### Modèle Physique de Donnée : MPD
 
