--- a/docs/cours/E04.md
+++ b/docs/cours/E04.md
@@ -185,5 +185,11 @@ On appele cette nouvelle table une table `pivot`
 
 ### Modèle Physique de Donnée : MPD
 
-C'est à ce moment que l'on choisit notre moteur de base de données
+L'objectif de ce schéma, et de préparer la création de la BDD.
+
+C'est à ce moment que l'on choisit notre moteur de base de données.
 C'est à ce moment que l'on décide des types de données [sql.sh](https://sql.sh/416-limites-types-donnees-sgbd)
+
+C'est à ce moment que l'on fixe les ID
+
+Dans la vrai vie, ce schéma est généré par des outils qui se connecte à la BDD (phpmyadmin, adminer)
