--- a/docs/cours/E05.md
+++ b/docs/cours/E05.md
@@ -141,17 +141,50 @@ Et ensuite Doctrine valdie que notre BDD est en accord avec nos entités (vide p
 
 ```bash
 bin/console doctrine:schema:validate
+
+Mapping
+-------
+
+                                                                                                
+ [OK] The mapping files are correct.                                                            
+                                                                                                
+
+Database
+--------
+
+                                                                                                
+ [OK] The database schema is in sync with the mapping files.                                    
+                                                                                                
+
 ```
 
 ### make:entity
 
+Sans les objets de la BDD, doctrine ne sais pas comment faire.
+Il va falloir créer ces Entité.
 
+Doctrine à un principe de fonctionnement que l'on appele `CodeFirst` en oppsition à `BaseFirst`
+Cela veux dire que la structure de la BDD, est entièrement généré depuis le code.
 
+Plus besoin d'aller dans Adminer. JAMAIS. en tout cas par pour la structure.
+Quand je parle de structure, c'est les tables et les champs.
 
+Pour générer la structure de la BDD, il nous faut des entités.
+C'est à partir des entités que Doctrine génère la BDD.
+
+donc on commence par la commande `bin/console make:entity`
 
 ### make:migration
 
+```bash
+bin/console make:migration
+```
+
 ### doctrine:migrations:migrate
+
+```bash
+bin/console doctrine:migrations:migrate
+```
 
 ### how to read
 
