--- a/docs/erreurs/E05.md
+++ b/docs/erreurs/E05.md
@@ -51,3 +51,5 @@ le nom de la base de donnée n'a pas été changé dans la chaine de connexion
 ## SQLSTATE[HY000] [1045] Access denied for user 'app'@'localhost' (using password: YES)
 
 le nom de l'utilisateur n'a pas été changé dans la chaine de connexion
+
+## [ERROR] The database schema is not in sync with the current mapping file
