--- a/docs/commandes/E05.md
+++ b/docs/commandes/E05.md
@@ -125,3 +125,173 @@ Database
                                                                                                 
 
 ```
+
+## make:entity
+
+```bash
+bin/console make:entity
+
+ Class name of the entity to create or update (e.g. GentlePizza):
+ > Genre
+
+ created: src/Entity/Genre.php
+ created: src/Repository/GenreRepository.php
+ 
+ Entity generated! Now let's add some fields!
+ You can always add more fields later manually or by re-running this command.
+
+ New property name (press <return> to stop adding fields):
+ > name      
+
+ Field type (enter ? to see all types) [string]:
+ > ?
+
+Main types
+  * string
+  * text
+  * boolean
+  * integer (or smallint, bigint)
+  * float
+
+Relationships / Associations
+  * relation (a wizard 🧙 will help you build the relation)
+  * ManyToOne
+  * OneToMany
+  * ManyToMany
+  * OneToOne
+
+Array/Object Types
+  * array (or simple_array)
+  * json
+  * object
+  * binary
+  * blob
+
+Date/Time Types
+  * datetime (or datetime_immutable)
+  * datetimetz (or datetimetz_immutable)
+  * date (or date_immutable)
+  * time (or time_immutable)
+  * dateinterval
+
+Other Types
+  * ascii_string
+  * decimal
+  * guid
+
+
+ Field type (enter ? to see all types) [string]:
+ > string
+
+ Field length [255]:
+ > 64
+
+ Can this field be null in the database (nullable) (yes/no) [no]:
+ > 
+
+ updated: src/Entity/Genre.php
+
+ Add another property? Enter the property name (or press <return> to stop adding fields):
+ > 
+
+
+           
+  Success! 
+           
+
+ Next: When you're ready, create a migration with php bin/console make:migration
+ 
+```
+
+## make:migration
+
+```bash
+bin/console make:migration
+
+
+           
+  Success! 
+           
+
+ Next: Review the new migration "migrations/Version20230427130714.php"
+ Then: Run the migration with php bin/console doctrine:migrations:migrate
+ See https://symfony.com/doc/current/bundles/DoctrineMigrationsBundle/index.html
+```
+
+## doctrine:migrations:migrate
+
+```bash
+bin/console doctrine:migrations:migrate
+
+ WARNING! You are about to execute a migration in database "oflix" that could result in schema changes and data loss. Are you sure you wish to continue? (yes/no) [yes]:
+ > yes
+
+[notice] Migrating up to DoctrineMigrations\Version20230427130946
+[notice] finished in 43.7ms, used 20M memory, 1 migrations executed, 1 sql queries
+
+```
+
+## création Type
+
+```bash
+bin/console make:entity
+
+ Class name of the entity to create or update (e.g. GrumpyElephant):
+ > Type
+
+ created: src/Entity/Type.php
+ created: src/Repository/TypeRepository.php
+ 
+ Entity generated! Now let's add some fields!
+ You can always add more fields later manually or by re-running this command.
+
+ New property name (press <return> to stop adding fields):
+ > name
+
+ Field type (enter ? to see all types) [string]:
+ > 
+
+ Field length [255]:
+ > 6
+
+ Can this field be null in the database (nullable) (yes/no) [no]:
+ > 
+
+ updated: src/Entity/Type.php
+
+ Add another property? Enter the property name (or press <return> to stop adding fields):
+ > 
+
+
+           
+  Success! 
+           
+
+ Next: When you're ready, create a migration with php bin/console make:migration
+ 
+```
+
+```bash
+bin/console make:migration
+
+
+           
+  Success! 
+           
+
+ Next: Review the new migration "migrations/Version20230427134109.php"
+ Then: Run the migration with php bin/console doctrine:migrations:migrate
+ See https://symfony.com/doc/current/bundles/DoctrineMigrationsBundle/index.html
+```
+
+
+```bash
+bin/console doctrine:migrations:migrate
+
+ WARNING! You are about to execute a migration in database "oflix" that could result in schema changes and data loss. Are you sure you wish to continue? (yes/no) [yes]:
+ > 
+
+[notice] Migrating up to DoctrineMigrations\Version20230427134109
+[notice] finished in 47.8ms, used 20M memory, 1 migrations executed, 1 sql queries
+
+```
