--- a/docs/cours/E06.md
+++ b/docs/cours/E06.md
@@ -78,3 +78,52 @@ Cela veux dire que si on a plusieurs BDD, seul le managerregistry est capable de
 C'est lui que l'on appele si on veux obtenir un EntityManager.
 
 #### doctrine:fixture:load
+
+C'est un mécanisme de Doctrine pour automatiser la création de données
+
+```bash
+composer require orm-fixtures --dev
+```
+
+un commence par `bin/console make:fixtures`
+
+Cela nous génère une classe dans laquelle on code nos créations d'entités
+
+```php
+for ($i=1; $i <= 10; $i++) { 
+    // * faire un new
+    $newGenre = new Genre();
+
+    // * remplir les propriétés
+    $newGenre->setName("Genre #" . $i);
+
+    // * appeler la méthode persist avec notre entité
+    // on demande la persitance de l'objet
+    $manager->persist($newGenre);
+}
+```
+
+## les relations
+
+Dans notre MCD on a décrit des relations entre nos tables (Entités)
+
+Nous allons décrire ces relations à Doctrine pour qu'il s'occupe de ces dernières.
+
+Nous ne manipulons que des objets !!
+
+Première question :
+Qui est le porteur de la relation ?
+Qui va recevoir la clé étrangère ?
+
+Movie 1,1 <-> 0,N Type
+C'est Movie qui reçoit la clé , c'est le porteur de la relation
+
+Pour décrire une relaiton on va modifier le porteur de la relation en lui ajoutant une propriété.
+
+```bash
+bin/console make:entity Movie
+```
+
+Je créer une propriété qui va être une entité `type` à part entière
+je veux toutes les informations du `type` liés à `Movie`
+Je ne met pas de majuscule car c'est une propriété
