Ajout des 2 solutions pour le tri creditOrder

--- a/docs/cours/E08.md
+++ b/docs/cours/E08.md
@@ -1,1 +1,40 @@
 # E08
+
+## tri de données
+
+On veux trier les castings par ordre de créditOrder
+
+2 solutions:
+
+* ce n'est que de l'affichage : c'est twig qui doit le faire
+* c'est un tri coté BDD, c'est au repository de le faire (dans le controller)
+
+### solution avec twig
+
+[doc](https://twig.symfony.com/doc/3.x/filters/sort.html)
+
+```twig
+{% set sortedCastings = movieForTwig.castings|sort((casting1, casting2) => casting1.creditorder <=> casting2.creditorder) %}
+```
+
+### solution avec BDD
+
+```php
+$allCastingFromMovie = $castingRepository->findBy(
+    // * critere de recherche
+    // on manipule TOUJOURS des objets
+    // donc on parle propriété : movie (de l'objet Casting)
+    // cette propriété doit être égale à l'objet $movie
+    [
+        "movie" => $movie
+    ],
+    // * orderBy
+    // on manipule TOUJOURS des objets
+    // on donne la propriété sur laquelle on trie
+    // en valeur, on donne le type de tri : ASC/DESC
+    [
+        "creditOrder" => "ASC"
+    ]
+);
+```
+
