--- a/docs/cours/E08.md
+++ b/docs/cours/E08.md
@@ -135,3 +135,9 @@ $this->createQueryBuilder('c') // c pour Casting
     ->getResult()
     // on récupère les résultats
 ```
+
+## faker PHP
+
+```bash
+composer require fakerphp/faker
+```
