--- a/docs/cours/E10.md
+++ b/docs/cours/E10.md
@@ -11,11 +11,11 @@ il me faut:
   * ✅ activer Bootstrap (si pas déjà fait)
     * `config/packages/twig.yaml`
     * `form_themes: ['bootstrap_5_layout.html.twig']`
-  * personnaliser le formulaire
+  * ✅ personnaliser le formulaire
 * traiter le formulaire coté controlleur
-  * `isSubmitted()`
-  * `isValid()`
-    * ajouter les contraintes de validation
+  * ✅ `isSubmitted()`
+  * ✅ `isValid()`
+    * ✅ ajouter les contraintes de validation
   * remplir des propriétés (association avec le film)
   * `persist()` + `flush()` + `redirectToRoute()`
 
@@ -30,3 +30,23 @@ il me faut:
 
 Si la propriété associée avec le ChoiceType accepte des valeurs multiple (tableau, relation Many) il faut mettre l'option `'multiple' => true`, sinon on aura cette erreur : `Notice: Array to string conversion`
 
+### désactivation HTML 5
+
+```twig
+{{ form_start(formulaire, {'attr': {'novalidate': 'novalidate'}})}}
+```
+
+Au niveau de la classe de formulaire
+
+```php
+        $resolver->setDefaults([
+            'data_class' => Review::class,
+            "attr" => ["novalidate" => 'novalidate']
+        ]);
+```
+
+### PB avec les dates et les contraintes
+
+[doc contrainte](https://symfony.com/doc/5.4/reference/constraints/Date.html)
+
+TODO JB
