--- a/docs/erreurs/E10.md
+++ b/docs/erreurs/E10.md
@@ -30,12 +30,12 @@ public function setWatchedAt(\DateTimeImmutable $watchedAt): self // ! ERREUR
 public function setWatchedAt(?\DateTimeImmutable $watchedAt): self // OK
 ```
 
-## Expected argument of type "DateTimeImmutable or null", "instance of DateTime" given at property path "watchedAt".
+## Expected argument of type "DateTimeImmutable or null", "instance of DateTime" given at property path "watchedAt"
 
 j'ai remplit un formulaire avec une date
 La propriété associée est de type DateTimeImmutable
 
-solution : il faut que je précise le type de date au niveau du formulaire
+solution : il faut que je précise le type de date au niveau du formulaire : `"input" => "datetime_immutable"`
 
 ```php
 // ? https://symfony.com/doc/5.4/reference/forms/types/date.html
