--- a/docs/commandes/E10.md
+++ b/docs/commandes/E10.md
@@ -92,3 +92,36 @@ bin/console make:form
  Next: Add fields to your form and start using it.
  Find the documentation at https://symfony.com/doc/current/forms.html
 ```
+
+## make:crud
+
+```bash
+composer require security-csrf 
+Info from https://repo.packagist.org: #StandWithUkraine
+./composer.json has been updated
+Running composer update symfony/security-csrf
+Loading composer repositories with package information
+Restricting packages listed in "symfony/symfony" to "5.4.*"
+Updating dependencies
+Lock file operations: 3 installs, 0 updates, 0 removals
+  - Locking symfony/password-hasher (v5.4.21)
+  - Locking symfony/security-core (v5.4.22)
+  - Locking symfony/security-csrf (v5.4.21)
+Writing lock file
+Installing dependencies from lock file (including require-dev)
+Package operations: 3 installs, 0 updates, 0 removals
+  - Installing symfony/password-hasher (v5.4.21): Extracting archive
+  - Installing symfony/security-core (v5.4.22): Extracting archive
+  - Installing symfony/security-csrf (v5.4.21): Extracting archive
+Package sensio/framework-extra-bundle is abandoned, you should avoid using it. Use Symfony instead.
+Generating optimized autoload files
+64 packages you are using are looking for funding.
+Use the `composer fund` command to find out more!
+
+Run composer recipes at any time to see the status of your Symfony recipes.
+
+Executing script cache:clear [OK]
+Executing script assets:install public [OK]
+
+No security vulnerability advisories found
+```
