rangement template front

--- a/docs/cours/E03.md
+++ b/docs/cours/E03.md
@@ -80,7 +80,7 @@ on donne toutes les données avec un tableau associatif.
 la clé du tableau deviendra le nom de la variable dans twig
 
 ```php
-$twigResponse = $this->render("main/home.html.twig",
+$twigResponse = $this->render("front/main/home.html.twig",
         [
             "monTexteKilEstBo" => $demoData
         ]);
