--- a/docs/erreurs/E02.md
+++ b/docs/erreurs/E02.md
@@ -76,7 +76,7 @@ On a vu qu'il pouvait aussi manquer le `composer require annotations`
 
 ## Unable to find template "main/home.html.twig" (looked into: /var/www/html/Symfony/S01/oflix/symfo-oflix-Gaetanleborgne/templates)
 
-l'erreur me dit qu'il ne trouve pas le fichier ` main/home.html.twig
+l'erreur me dit qu'il ne trouve pas le fichier ` front/main/home.html.twig
 
 attention donc a l'orthographe
 
