--- a/docs/commandes/E10.md
+++ b/docs/commandes/E10.md
@@ -125,3 +125,29 @@ Executing script assets:install public [OK]
 
 No security vulnerability advisories found
 ```
+
+bin/console make:crud
+
+ The class name of the entity to create CRUD (e.g. OrangeKangaroo):
+ > Movie
+
+ Choose a name for your controller class (e.g. MovieController) [MovieController]:
+ > Back\Movie
+
+ Do you want to generate tests for the controller?. [Experimental] (yes/no) [no]:
+ > 
+
+ created: src/Controller/Back/MovieController.php
+ created: src/Form/MovieType.php
+ created: templates/back/movie/_delete_form.html.twig
+ created: templates/back/movie/_form.html.twig
+ created: templates/back/movie/edit.html.twig
+ created: templates/back/movie/index.html.twig
+ created: templates/back/movie/new.html.twig
+ created: templates/back/movie/show.html.twig
+
+           
+  Success! 
+           
+
+ Next: Check your new CRUD by going to /back/movie/
