backoffice page accueil

--- a/docs/erreurs/E11.md
+++ b/docs/erreurs/E11.md
@@ -19,3 +19,7 @@ l'erreur me dit que l'on attend une `collection` pour la propriété `movie` de 
 Hors ce n'est pas ce que le relation dit : une saison n'a qu'un seul film.
 
 On suppose que le formulaire pour la propriété est marqué avec `multiple => true`, ce qui n'est pas logique.
+
+## Unexpected end of template
+
+il doit manquer un `{% endif %}`
