--- a/docs/commandes/E10.md
+++ b/docs/commandes/E10.md
@@ -126,6 +126,7 @@ Executing script assets:install public [OK]
 No security vulnerability advisories found
 ```
 
+```bash
 bin/console make:crud
 
  The class name of the entity to create CRUD (e.g. OrangeKangaroo):
@@ -151,3 +152,4 @@ bin/console make:crud
            
 
  Next: Check your new CRUD by going to /back/movie/
+```
