--- a/docs/cours/E11.md
+++ b/docs/cours/E11.md
@@ -37,3 +37,25 @@ On fera des tests dans ce fichier de navigation pour différencier le front du b
 ```twig
 <nav class="navbar navbar-expand-lg navbar-dark {% if isBackOffice %}bg-warning{% else %}bg-dark{% endif %}">
 ```
+
+## CRUD : query_builder
+
+
+## 404 custom
+
+[doc](https://symfony.com/doc/current/controller/error_pages.html)
+
+Tant que l'on est en dévelloppement (APP_ENV=dev) Symfony affiche une page d'erreur de débug.
+Impossible donc de voir la page 404 et de la personnaliser.
+
+Pour cela 2 solutions :
+
+* changer d'environnement
+  * APP_ENV=dev
+  * APP_ENV=prod
+* utiliser la route `/_error/{HTTP_CODE}`
+  * `/_error/404`
+  * `/_error/500`
+
+pour modifier la page d'erreur, il faut la créer dans le dossier `templates/bundles/TwigBundle/Exception/`
+chaque page d'erreur aura son fichier twig avec le code : `error404.html.twig`, `error500.html.twig` ...
